# rust-grpc-starterkit

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: client.rs  server.rs
src/protos/: mod.rs
src/protos/example/: helloworld.proto  mathematician.proto
src/shared/: log_utils.rs
